--- a/OverTheHill/Base.lproj/LaunchScreen.storyboard
+++ b/OverTheHill/Base.lproj/LaunchScreen.storyboard
@@ -15,15 +15,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="iPhone (180x180)" translatesAutoresizingMaskIntoConstraints="NO" id="Oks-55-Z2H">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="jrj-Jx-MB9">
                                 <rect key="frame" x="196" y="728" width="22" height="20"/>
                             </activityIndicatorView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="iPhone (180x180)" translatesAutoresizingMaskIntoConstraints="NO" id="Oks-55-Z2H">
+                                <rect key="frame" x="0.0" y="223" width="414" height="421"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.94254636759999999" green="0.86878746750000002" blue="0.70585364100000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.94254636759999999" green="0.86878746750000002" blue="0.70585364100000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jrj-Jx-MB9" secondAttribute="trailing" constant="196" id="1n7-Wb-mcQ"/>
                             <constraint firstItem="jrj-Jx-MB9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="196" id="QZC-RV-xmJ"/>
