--- a/OverTheHill/Base.lproj/Main.storyboard
+++ b/OverTheHill/Base.lproj/Main.storyboard
@@ -137,7 +137,7 @@
                                                 <constraint firstAttribute="height" constant="142" id="vak-Wr-1lC"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$2,800" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBI-zU-zGs">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$2,200" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBI-zU-zGs">
                                             <rect key="frame" x="178" y="37" width="114" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -206,7 +206,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4QF-Xy-7vX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-908" y="1555"/>
+            <point key="canvasLocation" x="-908" y="1554.872563718141"/>
         </scene>
         <!--Note View Controller-->
         <scene sceneID="cyI-cc-zCQ">
